[package]
name = "zeroback"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.6.1", features = ["derive"] }
reqwest = "0.13.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.52.1", features = ["full"] }
toml = "1.1.2"

[[bin]]
bench = false
path = "src/main.rs"
name = "zb"
